--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Install Azure Spring Cloud extension
       run: az extension add -y --name spring-cloud
     - name: Deploy to Azure Spring Cloud
-      run: az spring-cloud app deploy --resource-group <RESOURCE_GROUP> --service <SPRING_CLOUD_NAME> --name todo-service --jar-path todo-service/target/demo-0.0.1-SNAPSHOT.jar
+      run: az spring-cloud app deploy --resource-group kylietest --service kylietest --name todo-service --jar-path todo-service/target/demo-0.0.1-SNAPSHOT.jar
     - name: Deploy to Azure Spring Cloud
-      run: az spring-cloud app deploy --resource-group <RESOURCE_GROUP> --service <SPRING_CLOUD_NAME> --name todo-service --jar-path gateway/target/demo-0.0.1-SNAPSHOT.jar
+      run: az spring-cloud app deploy --resource-group kylietest --service kylietest --name gateway --jar-path gateway/target/demo-0.0.1-SNAPSHOT.jar
